# bastel-project-poolinator

./: .ignore  Cargo.toml  docker-compose.yml
crates/testfuncrs/: Cargo.toml
crates/testfuncrs/src/: main.rs
dotnet-sample-function/: Program.cs  dotnet-sample-function.csproj
src/: lib.rs
