[package]
name = "poolinator"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/*",
]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
config = "0.13.3"
deadpool = { version = "0.10.0", features = ["serde", "rt_tokio_1"] }
deadpool-lapin = { version = "0.11.0", features = ["serde", "rt_tokio_1"] }
futures = "0.3.28"
futures-util = "0.3.28"
lapin = { version = "2.3.1", features = ["serde_json"] }
miette = { version = "5.10.0", features = ["fancy"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full", "tracing"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wasi-common = "14.0.1"
wasmtime = "14.0.1"
wasmtime-wasi = { version = "14.0.1", features = ["wasi-tokio", "tokio"] }
